loaded data using python

--- a/Task_1/main.ipynb
+++ b/Task_1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,33 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['happy', 'sad']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cleaning the data\n",
     "dataDir = 'data'\n",
     "image_exts = ['jpeg','jpg', 'bmp', 'png']\n",
-    "os.listdir(dataDir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for data_file in os.listdir(dataDir): \n",
     "    for image in os.listdir(os.path.join(dataDir, data_file)):\n",
     "        image_path = os.path.join(dataDir, data_file, image)\n",
@@ -56,6 +36,45 @@
     "        except Exception as e: \n",
     "            print('Issue with image {}'.format(image_path))\n",
     "            # os.remove(image_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 241 files belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#loading data\n",
+    "data = tf.keras.utils.image_dataset_from_directory(\"data\")  # using keras utils to load data\n",
+    "type(data) # not in memory\n",
+    "data_iterator = data.as_numpy_iterator()\n",
+    "batch = data_iterator.next() # batch is of length 2\n",
+    "# 1 is the arrays and 2 is the label (the classes we have)\n",
+    "data_iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Script to figure out which label is happy and which one is sad\n",
+    "fig, ax = plt.subplots(ncols=4, figsize=(20,20))\n",
+    "for idx, img in enumerate(batch[0][:4]):\n",
+    "    ax[idx].imshow(img.astype(int))\n",
+    "    ax[idx].title.set_text(batch[1][idx])\n",
+    "#after running\n",
+    "#Class: 1 = Sad\n",
+    "#Class: 0 = Happy"
    ]
   },
   {
